add student create api with services, models and database

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>student_registration_service</artifactId>
         <groupId>com.skiply.student.registration</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,6 +23,10 @@
             <groupId>org.javamoney</groupId>
             <artifactId>moneta</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
     </dependencies>
 
