--- a/student_service/src/main/resources/application-dev.yaml
+++ b/student_service/src/main/resources/application-dev.yaml
@@ -1,6 +1,8 @@
+server:
+  port: 8081
 spring:
   datasource:
-    url: jdbc:h2:mem:carinfodbdev;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+    url: jdbc:h2:mem:student_db;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
     driverClassName: org.h2.Driver
     username: sa
     password:
