add student register success kafka event pub and sub

--- a/payment_service/src/main/resources/application.yaml
+++ b/payment_service/src/main/resources/application.yaml
@@ -1,3 +1,17 @@
 spring:
   profiles:
     active: dev
+  kafka:
+    consumer:
+      auto-offset-reset: earliest
+      bootstrap-servers: localhost:29092
+      group-id: com.skiply.student.registration.payment
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.skiply.student.registration.common.model.kafka #package of the json message classes
+    producer:
+      acks: -1
+      bootstrap-servers: localhost:29092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
