--- a/reporting_service/pom.xml
+++ b/reporting_service/pom.xml
@@ -65,6 +65,15 @@
             <artifactId>common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.javamoney</groupId>
+            <artifactId>moneta</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
