add get report api

--- a/reporting_service/src/main/resources/openapi/reporting-api-v1.yaml
+++ b/reporting_service/src/main/resources/openapi/reporting-api-v1.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
 paths:
   /reports/{paymentId}:
-    post:
+    get:
       operationId: getPaymentReport  # Specify the generated method name
       summary: Get the report for a payment
       parameters:
