--- a/student_service/src/main/resources/openapi/student-api-v1.yaml
+++ b/student_service/src/main/resources/openapi/student-api-v1.yaml
@@ -75,6 +75,8 @@ components:
           type: string
         school:
           type: string
+        paymentId:
+          type: string
         status:
           type: string
           enum:
